Added Images endpoint. Refactored product images.